--- a/_posts/2017-04-23-HFOSS-Blog-11.markdown
+++ b/_posts/2017-04-23-HFOSS-Blog-11.markdown
@@ -11,7 +11,7 @@ author: peterzujko
 ---
 
 # OSMI
-I'm on a Twitter a lot and I follow a good amount of developers in the Go/container space. One person retweeted something about this organization, Open Sourcing Mental Illness (OSMI for short)i and I think it's definitely something worth talking about. 
+I'm on a Twitter a lot and I follow a good amount of developers in the Go/container space. One person retweeted something about this organization, Open Sourcing Mental Illness (OSMI for short) and I think it's definitely something worth talking about. 
 
 OSMI tries to fight the stigma that people have around mental illness by encouraging developers to speak openly about their experiences and struggles. The organization also collects and publishes surveys about mental health in the workplace. Finally, the organization also publishes resources for companies to better support their employees. 
 
